--- a/src/njk/templates/partials/component/cta-sidebar-bio.njk
+++ b/src/njk/templates/partials/component/cta-sidebar-bio.njk
@@ -1,13 +1,14 @@
 <div class="sidebar-cta sidebar-cta-bio">
     <div class="sidebar-bio__thumb">
         <figure class="image image-1by1">
-            <img src="https://placehold.it/230" alt="placeholder">
+            <img src="{{ includePath }}images/placeholders/mahmoud-ghavi.jpg" alt="placeholder">
         </figure>
     </div>
     <!-- /.sidebar-bio__thumb -->
-    <div class="font-weight-bold">John Smith</div>
-    <div class="small font-italic mb-2">Instructor</div>
-    <p class="small">{% include "partials/wysiwyg/sentence-sm.njk" %}</p>
-    <a href="#" class="btn btn-primary btn-lg btn-block mt-3">View Full Bio</a>
+	<p class="h5 subheading">Instructor:</p>
+    <div class="font-weight-bold">Mahmoud Ghavi, PhD</div>
+    <div class="small font-italic mb-2">Chair, Consort Institute</div>
+    <p class="small">Mahmoud Ghavi is an accomplished scientist, educator and corporate executive with extensive experience and proven leadership in the fields of information technology, data management, data analytics, and health care informatics.</p>
+    <a href="#" class="btn btn-primary btn-block mt-3">View Full Bio</a>
 </div>
 <!-- /.sidebar-cta .sidebar-bio .gradient-hz-yellow -->
